--- a/codegen-templates/ruby/types/struct.rb.jinja
+++ b/codegen-templates/ruby/types/struct.rb.jinja
@@ -10,6 +10,9 @@ module Svix
   {% endif -%}
   class {{ class_ty }}
     {% for field in type.fields -%}
+    {% if field.description is defined -%}
+    {{ field.description | to_doc_comment(style="ruby") }}
+    {% endif -%}
     attr_accessor :{{ field.name | to_snake_case }}
     {% endfor %}
     ALL_FIELD ||= [
