js: Add generate an empty struct for variants without a config.
This will help Lucho with an upcoming frontend thing.

--- a/codegen-templates/javascript/types/struct_enum.ts.jinja
+++ b/codegen-templates/javascript/types/struct_enum.ts.jinja
@@ -14,11 +14,21 @@ interface _{{ type_name }}Fields {
     {% include "types/struct_fields.ts.jinja" -%}
 }
 
+{# export the types for enum variants without a config -#}
+{% for variant in type.variants %}
+    {% if variant.schema_ref is not defined %}
+/* eslint @typescript-eslint/no-empty-object-type: 0 */
+interface {{ type_name }}{{ variant.name | to_upper_camel_case }}{{ type.content_field | to_upper_camel_case }} {}
+    {% endif %}
+{% endfor %}
+
 {% for variant in type.variants %}
 interface {{ type_name }}{{ variant.name | to_upper_camel_case }} {
     {{ disc_field_name }}: '{{ variant.name }}';
     {% if variant.schema_ref is defined -%}
     {{ content_field_name }}: {{ variant.schema_ref | to_upper_camel_case }};
+    {% else -%}
+    {{ content_field_name }}?: {{ type_name }}{{ variant.name | to_upper_camel_case }}{{ type.content_field | to_upper_camel_case }}
     {%- endif %}
 }
 {% endfor %}
