Upgrade openapi-codegen

--- a/codegen-templates/go/component_type_summary.go.jinja
+++ b/codegen-templates/go/component_type_summary.go.jinja
@@ -4,7 +4,7 @@ package svix
 import "github.com/svix/svix-webhooks/go/models"
 
 type (
-{% for type in types -%}
+{% for type in api.types -%}
 	{{ type | to_upper_camel_case }} =  models.{{ type | to_upper_camel_case }}
 {% endfor %}
 )
