--- a/codegen-templates/python/summary.py.jinja
+++ b/codegen-templates/python/summary.py.jinja
@@ -11,7 +11,7 @@
     {%- endif -%}
 {% endfor %}
 
-{% for type in types -%}
+{% for type in api.types -%}
 from ..models import {{ type | to_upper_camel_case }}
 {% endfor %}
 from .svix import Svix, SvixAsync, SvixOptions, DEFAULT_SERVER_URL
@@ -37,7 +37,7 @@ __all__ = [
 {% endfor %}
 {# hardcode this until we fix empty openapi structs #}
     "BackgroundTaskData",
-{% for type in types -%}
+{% for type in api.types -%}
     "{{ type | to_upper_camel_case }}",
 {% endfor -%}
 ]
