--- a/codegen-templates/javascript/component_type_summary.ts.jinja
+++ b/codegen-templates/javascript/component_type_summary.ts.jinja
@@ -1,4 +1,4 @@
 // this file is @generated
-{% for type in types -%}
+{% for type in api.types -%}
 export { {{ type | to_upper_camel_case }} } from "./{{ type | to_lower_camel_case }}";
 {% endfor %}
