js: Add support for "real" struct enums

--- a/codegen/templates/javascript/types/struct.ts.jinja
+++ b/codegen/templates/javascript/types/struct.ts.jinja
@@ -10,7 +10,9 @@ import {
 
 {{ doc_comment }}
 export interface {{ type_name }} {
+    {% with fields = type.fields -%}
     {% include "types/struct_fields.ts.jinja" -%}
+    {% endwith -%}
 }
 
 export const {{ type_name }}Serializer = {
