--- a/codegen/templates/svix-cli/api_resource.rs.jinja
+++ b/codegen/templates/svix-cli/api_resource.rs.jinja
@@ -4,11 +4,9 @@
 {% if resource.name == "message" %}{% set resource_id_name = "msg_id" %}{% endif -%}
 {% if resource.name == "integration" %}{% set resource_id_name = "integ_id" %}{% endif -%}
 
-use chrono::{DateTime, Utc};
 use clap::{Args, Subcommand};
 use svix::api::*;
 
-use crate::json::JsonOf;
 {% for _, sub in resource.subresources | items -%}
 use super::{{ sub.name | to_snake_case }}::{{ sub.name | to_upper_camel_case }}Args;
 {% endfor %}
@@ -23,6 +21,9 @@ use super::{{ sub.name | to_snake_case }}::{{ sub.name | to_upper_camel_case }}A
         pub struct {{ param_struct_type_name }} {
             {% for p in op.query_params -%}
                 {% set ty = p.type.to_rust() -%}
+                {% if ty == "DateTime<Utc>" -%}
+                    {% set ty = "chrono::DateTime<chrono::Utc>" -%}
+                {% endif -%}
                 {% if not p.required %}{% set ty %}Option<{{ ty }}>{% endset %}{% endif -%}
                 {% if p.description is defined -%}
                     {{ p.description | to_doc_comment(style="rust") }}
@@ -108,9 +109,9 @@ pub enum {{ resource_type_name }}Commands {
             {% if op.request_body_schema_name is defined -%}
                 {{ op.request_body_schema_name | to_snake_case }}:
                 {% if op.request_body_all_optional %}
-                Option<JsonOf<{{ op.request_body_schema_name }}>>
+                Option<crate::json::JsonOf<{{ op.request_body_schema_name }}>>
                 {% else %}
-                JsonOf<{{ op.request_body_schema_name }}>
+                crate::json::JsonOf<{{ op.request_body_schema_name }}>
                 {% endif %}
                 ,
             {% endif -%}
