Add the `this file is @generated` comments

--- a/codegen/templates/python/summary.py.jinja
+++ b/codegen/templates/python/summary.py.jinja
@@ -1,3 +1,4 @@
+# this file is @generated
 {% set excluded_resources = ["environment", "health", "ingest"] -%}
 
 {%- for resource in api.resources -%}
