php: Fix bug where empty objects were encoded as `[]`

--- a/codegen/templates/php/types/struct.php.jinja
+++ b/codegen/templates/php/types/struct.php.jinja
@@ -119,7 +119,7 @@ class {{ type.name | to_upper_camel_case }} implements \JsonSerializable
             {% endif -%}
         {% endfor -%}
 
-        return $data;
+        return \Svix\Utils::newStdClassIfArrayIsEmpty($data);
     }
 
     /**
