ts[biome]: Fix `lint/correctness/noUnusedFunctionParameters`

--- a/codegen/templates/javascript/types/struct.ts.jinja
+++ b/codegen/templates/javascript/types/struct.ts.jinja
@@ -14,7 +14,8 @@ export interface {{ type_name }} {
 }
 
 export const {{ type_name }}Serializer = {
-    _fromJsonObject(object: any): {{ type_name }} {
+    {% set underscore_prefix %}{% if type.fields | length == 0%}_{% endif %}{% endset -%}
+    _fromJsonObject({{ underscore_prefix }}object: any): {{ type_name }} {
         return {
             {% for field in type.fields -%}
                 {% set field_expr %}object['{{ field.name }}']{% endset -%}
@@ -23,7 +24,7 @@ export const {{ type_name }}Serializer = {
         };
     },
 
-    _toJsonObject(self: {{ type_name }}): any {
+    _toJsonObject({{ underscore_prefix }}self: {{ type_name }}): any {
         return {
             {% for field in type.fields -%}
                 {% set field_expr %}self.{{ field.name | to_lower_camel_case }}{% endset -%}
