--- a/codegen/templates/javascript/types/struct_enum.ts.jinja
+++ b/codegen/templates/javascript/types/struct_enum.ts.jinja
@@ -17,6 +17,7 @@ interface _{{ type_name }}Fields {
 {# export the types for enum variants without a config -#}
 {% for variant in type.variants %}
     {% if variant.schema_ref is not defined %}
+// biome-ignore lint/suspicious/noEmptyInterface: backwards compat
 interface {{ type_name }}{{ variant.name | to_upper_camel_case }}{{ type.content_field | to_upper_camel_case }} {}
     {% endif %}
 {% endfor %}
