--- a/codegen/templates/javascript/summary.ts.jinja
+++ b/codegen/templates/javascript/summary.ts.jinja
@@ -4,13 +4,13 @@ import { {{ resource.name | to_upper_camel_case }} } from "./api/{{ resource.nam
 {% endfor -%}
 {# hardcoded for backwards compat -#}
 import { OperationalWebhookEndpoint } from "./api/operationalWebhookEndpoint";
-import { SvixRequestContext } from "./request";
+import type { SvixRequestContext } from "./request";
 
 export { PostOptions, ApiException } from "./util";
 export { HTTPValidationError, HttpErrorOut, ValidationError } from "./HttpErrors";
 export * from "./webhook";
 export * from "./models/index";
-import { XOR } from "./util";
+import type { XOR } from "./util";
 
 export { ApplicationListOptions } from "./api/application";
 export { BackgroundTaskListOptions } from "./api/backgroundTask";
