codegen: Also import JsOption in Rust struct_enum template

--- a/codegen/templates/rust/types/struct_enum.rs.jinja
+++ b/codegen/templates/rust/types/struct_enum.rs.jinja
@@ -1,4 +1,7 @@
 use serde::{Deserialize, Serialize};
+{% if type.name is endingwith "Patch" -%}
+    use js_option::JsOption;
+{% endif %}
 
 use super::{
     {% for c in referenced_components -%}
