--- a/codegen/templates/java/types/struct_enum.java.jinja
+++ b/codegen/templates/java/types/struct_enum.java.jinja
@@ -33,6 +33,7 @@ import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.util.HashMap;
 import java.util.Map;
+import java.util.List;
 import java.util.Objects;
 import java.net.URI;
 import java.time.OffsetDateTime;
