--- a/codegen/templates/kotlin/types/struct_enum.kt.jinja
+++ b/codegen/templates/kotlin/types/struct_enum.kt.jinja
@@ -15,6 +15,7 @@ import kotlinx.serialization.json.Json
 import kotlinx.serialization.json.JsonElement
 import kotlinx.serialization.json.buildJsonObject
 import kotlinx.datetime.Instant
+import com.svix.kotlin.MaybeUnset
 
 
 @Serializable(with = {{ type_name }}Serializer::class)
